--- a/Citi Bike-checkpoint.ipynb
+++ b/Citi Bike-checkpoint.ipynb
@@ -8,6 +8,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Introduction\n",
+    "Citi bike is a public bike-sharing system and it is now owned by Lyft. Lyft operates Citi bike around New York City, and Jersey City, NJ. Citi bike bicycle sharing system was opened in May 2013 with 332 stations and 6,000 bikes. Due to the high volume of growth rate, Citi bike is expanding around the five boroughs of NYC. As of July 2017, there are 130,000 annual subscribers. The average is 48,315 rides per day in 2018. Rides per day/week/month/year are still growing rapidly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I am interested in the following\n",
+    "\n",
+    "- Highest trip duration.\n",
+    "- What kind of a user took the most ride.\n",
+    "- Which gender took the most rides.\n",
+    "- Top start/end location's names."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
